# hello

./: CMakeLists.txt  main.c  run.sh
Inc/: hello.h  mydb.h
Src/: hello.c  mydb.c
